# social_nav_ros

./: .pre-commit-config.yaml  README.md
social_nav_metrics/: package.xml  setup.py
social_nav_metrics/social_nav_metrics/: __init__.py
social_nav_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
social_nav_msgs/msg/: Pedestrian.msg  PedestrianWithCovariance.msg  Pedestrians.msg  PedestriansWithCovariance.msg  PolarPedestrian.msg  PolarPedestrians.msg
social_nav_util/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
social_nav_util/social_nav_util/: pedestrian_smoother.py  plot_velocity_from_bag.py  visualize_pedestrians.py
