<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>social_nav_metrics</name>
  <version>0.1.0</version>
  <description>Navigation metrics for navigating around people</description>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <license>BSD 3-clause</license>

  <depend>navigation_metrics</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
